// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements AnypointmqMessageBindingElement given headers field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(AnypointmqMessageBindingElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements AnypointmqMessageBindingElement should refract to semantic ApiDOM tree 1`] = `
(AnypointmqMessageBindingElement
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
